<resources>
    <string name="app_name">Prophone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_pattern_lock_view">PatternLockView</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_wallpaper">Wallpaper</string>

    <string name="shortcut_long_label">One Tap Lock</string>
    <string name="shortcut_disabled_message">Disabled Message</string>
    <string name="shortcut_short_label">One Tap Lock</string>

    <string name="security_mobile_no">**Security Mobile Number is the mobile number which will be used to send notification if your current(this) phone is stolen.</string>
    <string name="security_mobile_note">Note: Enter the number which is present in other device.</string>
    <string name="security_email">*Security Email is the email which will be used to send notification if your current(this) phone is stolen.</string>
    <string name="security_email_note">Note: Enter the email which is logged in on other device also.</string>
</resources>
