<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_screen_lock"
        android:shortcutDisabledMessage="@string/shortcut_disabled_message"
        android:shortcutId="random_constellation"
        android:shortcutLongLabel="@string/shortcut_long_label"
        android:shortcutShortLabel="@string/shortcut_short_label">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.example.devyankshaw.checking.OneTapLock.TapLock"
            android:targetPackage="com.example.devyankshaw.checking">
            <extra
                android:name="clicked"
                android:value="true" />
        </intent>

    </shortcut>

</shortcuts>