<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/layout_rectangle_red"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="Prophone"
                android:textColor="@color/accent"
                android:textSize="45sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="23dp"
                android:layout_weight="1.5"
                android:gravity="center_horizontal"
                android:text="Sign Up"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
        <!-- Name Label -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="140dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_rectangle_red"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingTop="20dp"
            android:paddingRight="12dp"
            android:paddingBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="6dp">

                <EditText
                    android:id="@+id/name_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/text"
                    android:drawableEnd="@drawable/ic_person"
                    android:hint="Name"
                    android:inputType="textPersonName"
                    android:paddingLeft="3dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/blue_grey" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="6dp">

                <EditText
                    android:id="@+id/email_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/text"
                    android:drawableEnd="@drawable/ic_email"
                    android:hint="Security Email*"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="3dp"
                    android:textColor="@color/blue_grey" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="6dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4">

                        <EditText
                            android:id="@+id/number_sign_up"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/text"
                            android:drawableEnd="@drawable/ic_mobile"
                            android:hint="Security Mobile Number**"
                            android:inputType="number"
                            android:paddingLeft="3dp"
                            android:textColor="@color/blue_grey" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_verify_number"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_round_red"
                        android:text="Verify"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/otp_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="6dp"
                        android:gravity="center">

                        <EditText
                            android:id="@+id/edt_otp"
                            android:layout_width="90dp"
                            android:layout_height="30dp"
                            android:background="@drawable/text"
                            android:ems="4"
                            android:gravity="center_horizontal"
                            android:hint="Enter OTP"
                            android:inputType="number"
                            android:textColor="@color/blue_grey" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/resend_otp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/button_round_red"
                            android:text="Resend OTP"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />

                        <Button
                            android:id="@+id/validate_otp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_round_red"
                            android:text="Validate"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="6dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/blue_grey">

                <EditText
                    android:id="@+id/password_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/text"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:paddingLeft="3dp"
                    android:textColor="@color/blue_grey" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="6dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/blue_grey">

                <EditText
                    android:id="@+id/reenter_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/text"
                    android:hint="Re-enter Password"
                    android:inputType="textPassword"
                    android:paddingLeft="3dp"
                    android:textColor="@color/blue_grey" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_round_red"
                android:padding="12dp"
                android:text="Sign Up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/link_sign_in"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Already have an account? Sign in"
                android:textColor="@color/blue_grey"
                android:textSize="16dip" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/security_email"
                    android:textColor="@color/blue_grey"
                    android:textSize="13sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/security_email_note"
                    android:textColor="@color/blue_grey"
                    android:textSize="14sp"
                    android:textStyle="italic|bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/security_mobile_no"
                    android:textColor="@color/blue_grey"
                    android:textSize="13sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/security_mobile_note"
                    android:textColor="@color/blue_grey"
                    android:textSize="14sp"
                    android:textStyle="italic|bold" />

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorAccent"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone"/>
    </RelativeLayout>
</ScrollView>